# SvaraGPT

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tvarallm/: .coverage  _version.py  config.py
tvarallm/models/: base.py
tvarallm/tests/: test_config.py
